# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.449 2005/10/30 22:08:58 codeman Exp $

*GLI-0.3 (17 Oct 2005)

  30 Oct 2005; Preston Cody <codeman@gentoo.org>
  webgli: networking and users screens
  added return_redirect to handler.py
  
  
  26 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  properly check for bootloader emerge exist status with exitsuccess()
  log output of grub install command
  add --batch --no-floppy to grub command
  grubinstallstring only gets logged if debug is on
  src/GLIUtility.py:
  update progress bar to 100% when process finishes

  25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  added debugging code for the interaction between the 2 threads via Event()
  src/GLIUtility.py:
  doubled the buffer size in spawn()
  bump buffer size up to 16384
  only report progress in 5% increments
  src/GLIArchitectureTemplate.py:
  kernelpkgs.txt support code
  above disabled because it sucks
  added add_pkg_to_world()

  24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  use tar | tar to copy files in copy_pkg_to_chroot()
  extract devices.tar.bz2 created by baselayout instead of running MAKEDEV

  23 Oct 2005; Preston Cody <codeman@gentoo.org>
  DEBUGGING ADDED TO AT.  verbose field added to CConfig.
  
  23 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  / maps to index.html
  look for actual files in html/
  src/net/html:
  new template
  src/GLIUtility.py:
  added parse_vdb_contents()
  src/GLIArchitectureTemplate.py:
  added copy_pkg_to_chroot()
  added debug code to dynamic-stage3
  switch dynamic-stage3 to new method
  lots of bug fixes from adding debug code

  22 Oct 2005; Preston Cody <codeman@gentoo.org>
  webgli initial bootloader support + changed make.conf.