@@ -27,6 +27,7 @@
 			<p><a href="/webgli/Networking">Networking</a></p>
 			<p><a href="/webgli/Daemons">Daemons</a></p>
 			<p><a href="/webgli/ExtraPackages">Extra Packages</a></p>
+			<p><a href="/webgli/Services">Services</a></p>
 			<p><a href="/webgli/Users">Users</a></p>
 			<p><a href="/webgli/Review">Review</a></p>
     </td>
