@@ -1,13 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.449 2005/10/30 22:08:58 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.450 2005/10/30 23:45:37 codeman Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
   30 Oct 2005; Preston Cody <codeman@gentoo.org>
   webgli: networking and users screens
   added return_redirect to handler.py
+  loading and saving install/client profiles works for webgli now
+  Review also done
   
   
   26 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
